| Bug #58985 | Assertion tab->quick->index != 64 failed in make_join_select() in sql_select.cc | ||
|---|---|---|---|
| Submitted: | 16 Dec 2010 20:14 | Modified: | 12 Jan 2011 17:32 |
| Reporter: | John Embretsen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Optimizer | Severity: | S1 (Critical) |
| Version: | 5.5.9-debug, 5.6.1-debug | OS: | Any |
| Assigned to: | Jørgen Løland | CPU Architecture: | Any |
| Tags: | regression | ||
[16 Dec 2010 20:14]
John Embretsen
[16 Dec 2010 20:18]
John Embretsen
Original test case to reproduce Bug#58985.
Attachment: bug58985_v1.test (application/octet-stream, text), 8.97 KiB.
[17 Dec 2010 6:59]
Øystein Grøvlen
According to bzrfind this is caused by the fix for Bug#58456.
[17 Dec 2010 8:45]
Jørgen Løland
Caused by incorrect sanity check. Quick selects may have index == MAX_KEY if it merges multiple indices.
[17 Dec 2010 9:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/127143 3208 Jorgen Loland 2010-12-17 BUG#58985: Assertion tab->quick->index != 64 failed in make_join_select() in sql_select.cc Caused by incorrect ASSERT introduced by BUG#58456. Quick selects may have index == MAX_KEY if it merges indices. @ sql/sql_select.cc Removed ASSERT. Quick selects may have index == MAX_KEY if it merges indices.
[17 Dec 2010 10:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/127167 3209 Jorgen Loland 2010-12-17 BUG#58985: Assertion tab->quick->index != 64 failed in make_join_select() in sql_select.cc Follow-up patch. Add sanity check for quick select when it is decided that it should be used. @ sql/opt_range.h Add is_valid() to QUICK_SELECT* @ sql/sql_select.cc Add sanity check for quick select when it is decided that it should be used.
[17 Dec 2010 12:51]
Bugs System
Pushed into mysql-5.5 5.5.9 (revid:georgi.kodinov@oracle.com-20101217124733-p1ivu6higouawv8l) (version source revid:georgi.kodinov@oracle.com-20101217111134-n5htzj2bnehvnv4w) (merge vers: 5.5.9) (pib:24)
[17 Dec 2010 12:55]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:georgi.kodinov@oracle.com-20101217125013-y8pb3az32rtbplc9) (version source revid:georgi.kodinov@oracle.com-20101217112525-t71wcarh16fii9bz) (merge vers: 5.6.1) (pib:24)
[17 Dec 2010 12:58]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/127198 3444 Jorgen Loland 2010-12-17 [merge] BUG#58985: Merge 5.5-bt -> trunk-bf
[17 Dec 2010 12:59]
Jørgen Løland
Pushed to 5.5-bt, merged to trunk-bf
[22 Dec 2010 21:30]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (version source revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (merge vers: 5.6.1) (pib:24)
[29 Dec 2010 12:52]
Bugs System
Pushed into mysql-5.5 5.5.9 (revid:alexander.nozdrin@oracle.com-20101229113652-km2v993aurv7h79j) (version source revid:alexander.nozdrin@oracle.com-20101229113132-uonlbcc2uopff8yb) (merge vers: 5.5.9) (pib:24)
[12 Jan 2011 17:32]
Paul DuBois
Bug does not appear in any released version. No changelog entry needed.
