sql/sql_select.cc
@@ -6504,7 +6504,6 @@ make_join_select(JOIN *join,SQL_SELECT *select,COND *cond)
               ((tab->type != JT_CONST && tab->type != JT_REF) ||
                (uint)tab->ref.key == tab->quick->index))
           {
-            DBUG_ASSERT(tab->quick->index != MAX_KEY);
 	    sel->quick=tab->quick;		// Use value from get_quick_...
 	    sel->quick_keys.clear_all();
 	    sel->needed_reg.clear_all();
